--- a/source-static/manifest.json
+++ b/source-static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "G-cores Dump",
-  "short_name": "G-cores Dump",
+  "short_name": "GcoresDump",
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#ffffff",
