--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "gcores-dump",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "dr-js",
   "license": "MIT",
   "description": "Offline first Gadio.",
@@ -27,11 +27,11 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "dr-js": "0.15.2-dev.4",
+    "dr-js": "^0.15.2",
     "dr-server": "^0.0.13"
   },
   "devDependencies": {
-    "dev-dep-tool": "0.3.1-dev.0",
-    "dev-dep-web": "^0.3.0"
+    "dev-dep-tool": "0.3.1-dev.1",
+    "dev-dep-web": "0.3.1-dev.1"
   }
 }
